--- a/Dice/README
+++ b/Dice/README
@@ -1,3 +1,7 @@
+I have created the use case diagram. If you want to edit this diagram, go this link: https://repository.genmymodel.com/minhloi/dice.
+After you edited it, please upload the image of diagram to document folder so we can see the change.
+
+
 TODO:
 - create user stories.
 - create use case diagram.
