--- a/Dice/README
+++ b/Dice/README
@@ -1,5 +1,5 @@
-I have created the use case diagram. If you want to edit this diagram, go this link: https://repository.genmymodel.com/minhloi/dice.
-After you edited it, please upload the image of diagram to document folder so we can see the change.
+I have created the use case diagram. If you want to edit this diagram, go to this link: https://repository.genmymodel.com/minhloi/dice.
+After you edited it, please re-upload the image of the diagram to document folder so we can see your change.
 
 
 TODO:
