--- a/Dice/README
+++ b/Dice/README
@@ -1,4 +1,6 @@
-I have created the use case diagram. If you want to edit this diagram, go to this link: https://repository.genmymodel.com/minhloi/dice.
+I have created the use case diagram. You can see the diagram in document folder.
+
+If you want to edit this diagram, go to this link: https://repository.genmymodel.com/minhloi/dice.
 After you edited it, please re-upload the image of the diagram to document folder so we can see your change.
 
 
