--- a/Dice/README
+++ b/Dice/README
@@ -1,8 +1,6 @@
 I have created the use case diagram. You can see the diagram in document folder.
-
-If you want to edit this diagram, go to this link: https://repository.genmymodel.com/minhloi/dice.
-After you edited it, please re-upload the image of the diagram to document folder so we can see your change.
-
+If you want to edit this diagram, go to this link: https://www.gliffy.com/
+Then download editable_use_case_diagram.gliffy in document folder and import it to Gliffy.com 
 
 TODO:
 - create user stories.
